# mcp-shield

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  artifacthub-repo.yml  docker-compose.yml  gateway-stdio.yml  gateway-test.yml  gateway.example.yml  gateway.yml  test-http.sh  test-stdio.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  code-review.yml  docker.yml  helm-release.yml  release.yml
docs/: architecture.md  audit.md  configuration.md  deployment.md  observability.md  usage.md
src/: config.rs  cost.rs  decode.rs  gateway.rs  hitl.rs  jwt.rs  lib.rs  live_config.rs  main.rs  metrics.rs  oauth.rs  openai_bridge.rs  prompt_injection.rs  schema_cache.rs  verify.rs
src/audit/: fanout.rs  mod.rs  openlineage.rs  sqlite.rs  stdout.rs  webhook.rs
src/middleware/: auth.rs  hitl.rs  mod.rs  opa.rs  payload_filter.rs  rate_limit.rs  schema_validation.rs
src/transport/: http.rs  mod.rs  stdio.rs
src/upstream/: http.rs  mod.rs
tests/: attack_scenarios.rs  e2e.sh  http_gateway.rs  node_helper.js  security_coverage.rs  stdio_gateway.rs
tests/common/: mod.rs
tests/fixtures/: gateway-e2e-stdio.yml  gateway-e2e.yml  gateway-stdio.yml  gateway-test.yml
