[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dummy-server"
path = "src/bin/dummy_server.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "audit"
path = "src/bin/audit.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
