[package]
name = "mcp-gateway"
version = "0.5.0"
edition = "2024"
description = "Security proxy for MCP (Model Context Protocol) — auth, rate limiting, payload filtering, and audit logging between AI agents and MCP servers"
repository = "https://github.com/nfvelten/mcp-gateway"
license = "Apache-2.0"
keywords = ["mcp", "proxy", "security", "ai", "gateway"]
categories = ["network-programming", "authentication"]

[[bin]]
name = "dummy-server"
path = "src/bin/dummy_server.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "audit"
path = "src/bin/audit.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
prometheus = "0.13"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken = "9"
